# Parhuzamos_algoritmusok-onlab

./: .clang-tidy  .gitignore  CMakeLists.txt  Documentation.md  munkaterv.md  time-report-all-2026-03-25.markdown
documentations/: sorting_algorithms.md
include/: OpenMP_examples_FOR.h  minSearch.h  sorting.h  tester.h  threadPool.h
src/: OpenMP-examples.cpp  OpenMP_examples_FOR.cpp  main.cpp  minSearch.cpp  sorting.cpp  threadPool.cpp
